Closed Bug 919767 Opened 12 years ago Closed 12 years ago

SIPCC CallInfo objects don't get cleaned up until browser closes

Categories

(Core :: WebRTC: Signaling, defect)

Other Branch
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla27

People

(Reporter: abr, Assigned: abr)

References

Details

(Keywords: memory-leak, Whiteboard: [MemShrink] [webrtc])

Attachments

(1 file)

I haven't been able to track down where it was introduced, but recent logs (and logs for the past couple of months at least) show that the SIPCC call info objects are being kept alive by an errant reference until browser shutdown. This can be demonstrated by turning on signaling logs; running a call; waiting for the PC destructor to be invoked (look for the timecard to be generated); waiting any arbitrary amount of time (from zero to infinity); and then closing the browser. When the browser closes, you'll see one of these messages for every PC that was ever created during that browser's run: 19:09:19 INFO - 2101870976[10011d910]: [main|def] ccapi_call.c:57: SIPCC-SIP_CC_PROV: CCAPI_Call_releaseCallInfo: ref=0x1278254e0: count=1 Beyond being a memory leak, this interferes with any inter-thread dispatches during call info cleanup, such as is required by Bug 842549.
Target Milestone: --- → mozilla27
Attachment #809441 - Flags: review?(ethanhugg)
Comment on attachment 809441 [details] [diff] [review] Clean up Call and CallInfo when finished Review of attachment 809441 [details] [diff] [review]: ----------------------------------------------------------------- This looks good to me.
Attachment #809441 - Flags: review?(ethanhugg) → review+
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: