Bug 919767 - Clean up Call and CallInfo when finished r=ehugg