media/webrtc/signaling/src/common/Wrapper.h
@@ -152,6 +152,7 @@ public:
 	public: \
 		static classname ## Ptr wrap(handletype handle); \
 		static void reset(); \
+                static void release(handletype handle); \
 	private: \
 		friend class Wrapper<classname>; \
 		typedef classname ## Ptr Ptr; \
@@ -169,5 +170,8 @@ public:
 	void classname::reset() \
 	{ \
 		getWrapper().reset(); \
-	}
-
+	} \
+        void classname::release(handletype handle) \
+        { \
+                getWrapper().release(handle); \
+        }
